--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,8 @@ $color3: #a531c2;
 $color4: blueviolet;
 $color5: rgb(247, 239, 239);
 $color6: pink;
-
+$color7: rgb(67, 67, 186);
+$color8: rgb(98, 98, 183);
 /*Fuentes*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@100&family=Quicksand:wght@300&display=swap');
@@ -38,7 +39,7 @@ body {
 
 
 h1 {
-    color: $color4;
+    color: $color3;
     font-size: 20px;
     text-align: center;
     font-family: $font3;
@@ -47,6 +48,7 @@ h1 {
 h2 {
     color: $color5;
     font-family: $font2;
+    font-size: 32px;
 }
 
 h3 {
@@ -57,7 +59,7 @@ h3 {
 }
 
 h4 {
-    color: $color5;
+    color: $color3;
     font-family: $font2;
     font-size: 20px;
     margin: 0;
@@ -98,7 +100,7 @@ th {
 .Aside {
     border: solid 2px $color2;
     font-size: 20px;
-    @include sizes(auto, 250px);
+    @include sizes(200px, auto);
     background-color: $color2;
     margin: 10px;
     display: flex;
@@ -124,7 +126,7 @@ th {
 .Tabla-Inicio {
     border: solid 2px $color2;
     font-size: 25px;
-    @include sizes(auto, 350px);
+    @include sizes(400px, 100%);
     background-color: $color2;
     margin-top: 0px;
 }
@@ -158,7 +160,7 @@ th {
     padding: 0px;
 
 
-    h2 {
+    h4 {
         color: $color3;
         font-size: 30px;
         padding: 15px;
@@ -176,7 +178,7 @@ th {
     align-items: center;
 
 
-    h2 {
+    h4 {
         color: $color3;
         font-size: 40px;
         font-family: $font3;
@@ -187,22 +189,22 @@ th {
         color: $color2;
         font-size: 25px;
         padding-right: 35px;
+
     }
 }
 
 .Aside-Deportes {
-    @extend .Aside
+    @extend .Aside;
 }
 
-.Main-Deportes {
+.Tabla {
+    @extend .Tabla-Inicio;
+}
+
+
+.contenedor-Deportes {
     display: flex;
     flex-direction: row;
-
-    .Tabla {
-        @extend .Tabla-Inicio
-    }
-
-
 }
 
 .Proximos-Eventos {
@@ -219,7 +221,7 @@ th {
 
     .Tenis table {
         font-size: 20px;
-        @include sizes(800px, auto);
+        @include sizes(auto, auto);
         background-color: $color2;
         margin: 20px;
         padding: 20px;
@@ -284,7 +286,7 @@ th {
     }
 
     ol {
-        @extend .Como-jugar
+        @extend .Como-jugar;
     }
 }
 
@@ -329,26 +331,8 @@ th {
 }
 
 .Header-Casino {
-    background-color: $color2;
-    grid-area: Header-Casino;
+    @extend .Header-Registrate;
 
-    .Casino1 {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .Img-Header {
-        @include sizes(30px, 30px);
-        margin-right: 50px;
-
-    }
-
-    p {
-        font-size: 30px;
-        font-family: $font2;
-        display: inline-block;
-        color: $color4;
-    }
 }
 
 
@@ -356,6 +340,14 @@ th {
     @include sizes(300px, 250px);
     margin: 20px;
     padding: 10px;
+    box-shadow: 0 0 15px $color3;
+    transition: 0.5s;
+    object-fit: cover;
+
+}
+
+.Img-Casino:hover {
+    transform: scale(1.2);
 }
 
 
@@ -410,7 +402,7 @@ th {
 }
 
 .Div-Promo {
-    h3 {
+    h1 {
         padding-left: 20px;
         font-size: 30px;
         color: $color3;
@@ -439,6 +431,53 @@ th {
 .Pago-Promo {
     @extend .Pago;
 }
+
+.Header-Info {
+    h1 {
+        font-size: 52px;
+    }
+}
+
+.Quienes-somos-Info {
+    @extend .Quienes-somos;
+
+
+    h2 {
+        @extend .Quienes-somos;
+    }
+
+    p {
+        @extend .Quienes-somos;
+    }
+}
+
+.Aclaraciones-Info {
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+    h3 {
+        font-family: $font2;
+        color: $color3;
+        font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+    }
+
+    p {
+        font-family: $font3;
+        color: $color2;
+        font-size: 35px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+
+    }
+
+}
+
 
 /*Boostrap*/
 .Logo-b {
@@ -483,7 +522,7 @@ th {
 }
 
 .carousel {
-    @include sizes(100vh, auto);
+    @include sizes(100vh, 600px);
     margin-right: 10px;
 }
 
@@ -518,9 +557,19 @@ th {
     @extend .Seccion1;
 }
 
+.Deportes {
+    .img-fluid {
+        @include sizes(500px, auto)
+    }
+}
+
+.Deportes2 {
+    @extend .Deportes;
+}
+
 /*Transitions*/
 .Header-Registrate {
-    h2 {
+    h1 {
         display: flex;
         justify-content: center;
         color: $color3;
@@ -531,6 +580,11 @@ th {
         animation-delay: 5s;
         animation-direction: alternate;
         animation-iteration-count: infinite;
+    }
+
+    h2 {
+        @extend h1;
+        font-size: 32px;
 
     }
 
@@ -547,7 +601,7 @@ th {
 }
 
 .Div-Promo {
-    h3 {
+    h1 {
         animation-duration: 4s;
         animation-name: aparecer;
         animation-delay: 5s;
@@ -566,6 +620,23 @@ th {
 
     }
 }
+
+/*Maps*/
+$colors:(
+    facebok: $color7,
+    twitter: $color8,
+    tiktok: $color3,
+    github: $color2,
+);
+
+@each $name-color,$bgcolor in $colors {
+    .btn--#{$name-color} {
+        background-color: $bgcolor;
+    }
+}
+
+
+
 /*Grid Area*/
 /*INDEX*/
 #Grilla {
@@ -628,9 +699,10 @@ th {
         @include sizes(auto, auto);
     }
 
-    h4 {
+    h1 {
         color: $color3;
         margin-left: 0px;
+
     }
 
     .Img-Partido1 {
@@ -661,28 +733,39 @@ th {
     justify-content: space-evenly;
     grid-area: Footer;
 
-    h2 {
+    h5 {
         color: $color3;
         margin-bottom: 10px;
-        margin-left: 10px;
+        font-size: $font1;
+
     }
 
-    .Ultimo li {
-        color: $color5;
-        justify-content: center;
+    .Ultimo {
+        .Redes {
+            font-size: 35px;
+            letter-spacing: 5px;
+
+        }
+
+        li {
+            color: $color5;
+            justify-content: center;
+        }
+
+
+        .Ultimo li:hover {
+            color: $color3;
+        }
+
+        .Imagen-Footer {
+            width: 50px;
+        }
     }
-
-
-    .Ultimo li:hover {
-        color: $color3;
-    }
-
-    .Imagen-Footer {
-        width: 50px;
-    }
-
 }
 
+#pie-Deportes {
+    @extend #pie;
+}
 
 /*MediaQueris*/
 /*Mobile First*/
@@ -693,8 +776,8 @@ th {
         grid-template-columns: 1fr;
         grid-template-rows: 300px 300px auto auto auto auto auto;
         grid-template-areas:
-            "Nav "
-            "Header "
+            "Nav"
+            "Header"
             "Main"
             "Secciones"
             "Quienes-somos"
@@ -849,3 +932,5 @@ th {
         grid-area: Aside;
     }
 }
+
+/*Grilla Deportes*/
