--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,7 +100,7 @@ th {
 .Aside {
     border: solid 2px $color2;
     font-size: 20px;
-    @include sizes(200px, auto);
+    @include sizes(150px, auto);
     background-color: $color2;
     margin: 10px;
     display: flex;
@@ -193,18 +193,30 @@ th {
     }
 }
 
-.Aside-Deportes {
-    @extend .Aside;
-}
-
-.Tabla {
-    @extend .Tabla-Inicio;
-}
-
-
 .contenedor-Deportes {
     display: flex;
     flex-direction: row;
+
+    .Aside-Deportes {
+        @extend .Aside;
+    }
+
+    .Tabla {
+        @extend .Tabla-Inicio;
+    }
+
+
+    .Encuentros {
+        .img-fluid {
+            margin: 15px;
+            border-radius: 15px;
+            box-shadow: 0 0 5px $color3;
+        }
+
+        h2 {
+            margin-left: 10px;
+        }
+    }
 }
 
 .Proximos-Eventos {
@@ -221,7 +233,7 @@ th {
 
     .Tenis table {
         font-size: 20px;
-        @include sizes(auto, auto);
+        @include sizes(100%, auto);
         background-color: $color2;
         margin: 20px;
         padding: 20px;
@@ -452,27 +464,22 @@ th {
 }
 
 .Aclaraciones-Info {
+    @extend .Quienes-somos;
     margin-top: 50px;
-    margin-bottom: 50px;
 
     h3 {
         font-family: $font2;
         color: $color3;
         font-size: 40px;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
+        
+        
     }
 
     p {
         font-family: $font3;
         color: $color2;
         font-size: 35px;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
+        
 
     }
 
@@ -622,14 +629,14 @@ th {
 }
 
 /*Maps*/
-$colors:(
-    facebok: $color7,
+$colors:(facebok: $color7,
     twitter: $color8,
     tiktok: $color3,
     github: $color2,
 );
 
-@each $name-color,$bgcolor in $colors {
+@each $name-color,
+$bgcolor in $colors {
     .btn--#{$name-color} {
         background-color: $bgcolor;
     }
@@ -696,6 +703,7 @@ $colors:(
     .Partido1 {
         background-color: $color2;
         margin-left: 10px;
+        margin-top: 70px;
         @include sizes(auto, auto);
     }
 
